update build version
Signed-off-by: acuicultor <ramoncuenca4@gmail.com>

--- a/updater/changelog.txt
+++ b/updater/changelog.txt
@@ -1,150 +1,22 @@
-Project name: RadioactiveKernel_Raviole-v2.0.0
-  * updater: Add support for automatic kernel updates via supported apps (acuicultor)
-  * uci: enable and update abi (acuicultor) [bf99d03cdd89]
-  * s2s: even longer dtap min time, avoid accidental dtaps (tbalden) [2eead556e252]
-  * uci: make cfg parse on init optional (tbalden) [031d0526025f]
-  * uci: ntf: add camera on/off status query (tbalden) [7bed75b82828]
-  * s2s: raise min time for doubletaps, fix for unintended double taps (tbalden) [e3c7327bab9a]
-  * s2s: update for p6/p6pro bugfixes (tbalden) [76fdac5565ca]
-  * uci: torch function: use uci function handlers for modules (tbalden) [8ad5ed2a7eee]
-  * s2s: add oriole setup parts (tbalden) [9d16ddfc52c5]
-  * arch: setup: add raven hw model detection (tbalden) [ada2c248ca57]
-  * uci: disable kadaway and adjust for non userland tree (freak07) [8b3ce7095a2a]
-  * cpufreq: add cleanslate battery optimizer feature (tbalden) [75425ed1dfbf]
-  * selinux: kernel permissive updates and fixes (tbalden) [0d3e11aa05e8]
-  * uci: add fs hooks for uci driver (tbalden) [7dd4c2ac3553]
-  * uci: add uci drivers, ntf, headers to p6 (tbalden) [c8bc3b7a4357]
-  * selinux: kernel permissive operations added (tbalden) [3ebd8c9b4dd7]
-  * PM/Sleep: Start killing wakelocks after two minutes of idle (120s) (Tyler Nijmeh) [8944ae5a25ed]
-  * gki: update abi (acuicultor) [8b16822f1aad]
-  * drivers: misc: power: implement usb fast charge mode (engstk) [c3353b695ce6]
-  * gki: abi update (acuicultor) [609d87705094]
-  * drivers: hwtracing: coresight: use O2 at compile time (acuicultor) [5041a631540e]
-  * defconfig regenerate (acuicultor) [91b8899bc57e]
-  * ssg: import from Samsung SM-S908B_12_Opensource (freak07) [b0b43a432cd4]
-  * bfq: Remove bfq_requeue_request_body() (Jan Kara) [0b27450bd147]
-  * bfq: Remove superfluous conversion from RQ_BIC() (Jan Kara) [5285b83ecc8d]
-  * bfq: Allow current waker to defend against a tentative one (Jan Kara) [f8b98d872e73]
-  * bfq: Relax waker detection for shared queues (Jan Kara) [d603525e637e]
-  * block, bfq: make bfq_has_work() more accurate (Yu Kuai) [cd5ebf41a9b7]
-  * block, bfq: protect 'bfqd->queued' by 'bfqd->lock' (Yu Kuai) [2682e1274e1d]
-  * bfq: Fix warning in bfqq_request_over_limit() (Jan Kara) [10b469a64f23]
-  * bfq: Make sure bfqg for which we are queueing requests is online (Jan Kara) [572b46921ad7]
-  * bfq: Get rid of __bio_blkcg() usage (Jan Kara) [782b641eb92d]
-  * bfq: Track whether bfq_group is still online (Jan Kara) [190d57e71b2b]
-  * bfq: Remove pointless bfq_init_rq() calls (Jan Kara) [9cc5821195a8]
-  * bfq: Drop pointless unlock-lock pair (Jan Kara) [7f4607f3b37f]
-  * bfq: Update cgroup information before merging bio (Jan Kara) [84aee5f147c9]
-  * bfq: Split shared queues on move between cgroups (Jan Kara) [4b83cc13ccff]
-  * bfq: Avoid merging queues with different parents (Jan Kara) [c31daa4484dd]
-  * bfq: Avoid false marking of bic as stably merged (Jan Kara) [cdffdf1ffa8c]
-  * block/bfq_wf2q: correct weight to ioprio (Yahu Gao) [20c3dda367d9]
-  * block/bfq-iosched: Fix spelling mistake "tenative" -> "tentative" (Colin Ian King) [3c58cad9255f]
-  * block, bfq: cleanup bfq_bfqq_to_bfqg() (Yu Kuai) [b8c227388e14]
-  * block, bfq: reset last_bfqq_created on group change (Paolo Valente) [58cb9c11a960]
-  * bfq: use bfq_bic_lookup in bfq_limit_depth (Christoph Hellwig) [4cd6834b1a7a]
-  * bfq: simplify bfq_bic_lookup (Christoph Hellwig) [95e0e5aff24c]
-  * fork: move copy_io to block/blk-ioc.c (Christoph Hellwig) [7d841335e591]
-  * bfq: Do not let waker requests skip proper accounting (Jan Kara) [00c1ed7ccfe3]
-  * bfq: Log waker detections (Jan Kara) [b3f3be3fcb88]
-  * bfq: Provide helper to generate bfqq name (Jan Kara) [ee356a099cd2]
-  * bfq: Limit waker detection in time (Jan Kara) [b22c47586a6c]
-  * bfq: Limit number of requests consumed by each cgroup (Jan Kara) [aea49fc10c2e]
-  * bfq: Store full bitmap depth in bfq_data (Jan Kara) [092f44c3ad0b]
-  * bfq: Track number of allocated requests in bfq_entity (Jan Kara) [c0774963efe0]
-  * bfq/mq-deadline: remove redundant check for passthrough request (Lin Feng) [1161c7dbb655]
-  * blk: Fix lock inversion between ioc lock and bfqd lock (Jan Kara) [7df837ae226e]
-  * bfq: Remove merged request already in bfq_requests_merged() (Jan Kara) [c3e47647e240]
-  * block, bfq: reset waker pointer with shared queues (Paolo Valente) [40baa576cce4]
-  * block, bfq: check waker only for queues with no in-flight I/O (Paolo Valente) [5112011e069a]
-  * block, bfq: avoid delayed merge of async queues (Paolo Valente) [88e7b31acc30]
-  * block, bfq: boost throughput by extending queue-merging times (Pietro Pedroni) [eb5817c2a125]
-  * block, bfq: consider also creation time in delayed stable merge (Paolo Valente) [1dfcda8fda9e]
-  * block, bfq: fix delayed stable merge check (Luca Mariotti) [e24229159548]
-  * block, bfq: let also stably merged queues enjoy weight raising (Paolo Valente) [3047559a4f6a]
-  * block, bfq: avoid circular stable merges (Paolo Valente) [e15543a84f80]
-  * block, bfq: merge bursts of newly-created queues (Paolo Valente) [8ea241c05f74]
-  * block, bfq: keep shared queues out of the waker mechanism (Paolo Valente) [d0f23dd59323]
-  * block, bfq: fix weight-raising resume with !low_latency (Paolo Valente) [944ba51ffcf1]
-  * block, bfq: make shared queues inherit wakers (Paolo Valente) [f49d948613c6]
-  * block, bfq: put reqs of waker and woken in dispatch list (Paolo Valente) [57a5518c6cbf]
-  * block, bfq: always inject I/O of queues blocked by wakers (Paolo Valente) [4a3af5a86f44]
-  * block/bfq: update comments and default value in docs for fifo_expire (Joseph Qi) [076ff6db1c6e]
-  * bfq-iosched: Revert "bfq: Fix computation of shallow depth" (Lin Feng) [05ff4ef0c648]
-  * bfq: Use only idle IO periods for think time calculations (Jan Kara) [7e3ffca58049]
-  * bfq: Use 'ttime' local variable (Jan Kara) [95ff59d4270c]
-  * iov_iter: optimise bvec iov_iter_advance() (Pavel Begunkov) [2d46996d699c]
-  * target/file: allocate the bvec array as part of struct target_core_file_cmd (Christoph Hellwig) [2f2973d45548]
-  * bvec/iter: disallow zero-length segment bvecs (Pavel Begunkov) [45ba32441b2c]
-  * splice: don't generate zero-len segement bvecs (Pavel Begunkov) [9382dde9c5b1]
-  * bfq: bfq_check_waker() should be static (Jens Axboe) [3e12325df5c2]
-  * block, bfq: make waker-queue detection more robust (Paolo Valente) [c461def4f62f]
-  * block, bfq: save also injection state on queue merging (Paolo Valente) [d0a998d6afb1]
-  * block, bfq: save also weight-raised service on queue merging (Paolo Valente) [2ae49cca0834]
-  * block, bfq: fix switch back from soft-rt weitgh-raising (Paolo Valente) [e67ad136ce35]
-  * block, bfq: re-evaluate convenience of I/O plugging on rq arrivals (Paolo Valente) [572f025ca1c1]
-  * block, bfq: replace mechanism for evaluating I/O intensity (Paolo Valente) [7c6fc0264a72]
-  * bio: don't copy bvec for direct IO (Pavel Begunkov) [743a67fd3884]
-  * block/psi: remove PSI annotations from direct IO (Pavel Begunkov) [4720d9876a9c]
-  * bio: add a helper calculating nr segments to alloc (Pavel Begunkov) [d4f7ff70b4b2]
-  * bfq: don't duplicate code for different paths (huhai) [e8ce8b80a4e4]
-  * block, bfq: do not expire a queue when it is the only busy one (Paolo Valente) [39640dfb5cda]
-  * block, bfq: avoid spurious switches to soft_rt of interactive queues (Paolo Valente) [e08b5952dfea]
-  * block, bfq: do not raise non-default weights (Paolo Valente) [13b6a00b11d1]
-  * block, bfq: increase time window for waker detection (Paolo Valente) [98162199fdd9]
-  * block, bfq: use half slice_idle as a threshold to check short ttime (Paolo Valente) [418901dff37d]
-  * bfq: Fix computation of shallow depth (Jan Kara) [8978ecd3165d]
-  * PM / devfreq: Make the monitor workqueue high priority (Sultan Alsawaf) [812ec5c1e23d]
-  * lib/string: optimized memset (Matteo Croce) [efa10468d42b]
-  * lib/string: optimized memmove (Matteo Croce) [40df241ea44e]
-  * mm: Disable watermark boosting by default (Sultan Alsawaf) [e8cb512fe481]
-  * cpufreq: setup Energy Model from DT opp-microwatt (Lukasz Luba) [6bd22ba9db0f]
-  * power: iio: odpm: Add new sysfs 'trace_trigger' with wq polling (Lukasz Luba) [5e3b87f9bd61]
-  * power: iio: odpm: Use trace event in the sysfs 'energy_value' show path (Lukasz Luba) [958849397e8d]
-  * trace: Add support for a new trace event 'power_meter' (Lukasz Luba) [095c71f2b0a8]
-  * defconfig regenerate (acuicultor) [e4e7819221d3]
-  * init: CC_OPTIMIZE_FOR_PERFORMANCE_O3 don't depend on ARC (celtare21) [bd5c1f47994a]
-  * PM / sleep: Skip OOM killer toggles when kernel is compiled for Android (Yaroslav Furman) [229064d51b30]
-  * buld.config: don't build eng and userdebug dtbo (acuicultor) [820bd1a1f50d]
-  * binder: Stub out debug prints by default (Sultan Alsawaf) [7e2ea15469ba]
-  * arm64: dts: Don't build userdebug or eng (celtare21) [f7d16c66ff9e]
-  * dma-buf/sync_file: Remove debug names from sync data structures (Sultan Alsawaf) [9936e08073ae]
-  * drivers: nfc: Lower wakelock timeout (celtare21) [8369d3c506e8]
-  * mm: oom_kill: Reduce some verbose logging (Diab Neiroukh) [99a25bcfcbef]
-  * sched: core: silence no longer affine to cpu logspam (Yaroslav Furman) [a4e4116544b7]
-  * cpu: Silence log spam when a CPU is brought up (Sultan Alsawaf) [e083a2af08c7]
-  * staging: binder - Set binder_debug_mask=0 to suppress logging (John Dias) [8c6ba56b7a7a]
-  * pwm: treat double free as a debug message (Park Ju Hyung) [6c20b3a8dc33]
-  * f2fs: reduce timeout for uncongestion (Park Ju Hyung) [d62d58764a2d]
-  * f2fs: set ioprio of GC kthread to idle (Park Ju Hyung) [9111d8f266e5]
-  * dtc: quiet (tbalden) [b81ee2b4b619]
-  * defconfig: adjust cmdline for faster boot (engstk) [cf0e651a5f4a]
-  * fs: sync: Avoid calling fdget without fdput When adding fsync support, we check for fsync_enabled() in several cases but it appears that we should fdput() after fdget() but the current code just check for fsync_enabled and directly return in some cases after calling fdget(). (Wang Han) [53c23817fd9e]
-  * fs: fsync on/off support (franciscofranco) [431d7004bf3d]
-  * workqueue: change permissions to allow root control of wq_power_efficient toggle (matthewdalex) [e392dead66a6]
-  * defconfig regenerate (acuicultor) [6292ed8ab0d2]
-  * makefile: disable some clang spam (engstk) [f90e37407dac]
-  * makefile: disable some clang spam (engstk) [93edec384275]
-  * makefile: add initial build changes (engstk) [3cbcf6829c03]
-  * [TESTING] gki: disable debug core Trying to speed up the system (Jaegeuk Kim) [897f24094a4a]
-  * scripts: fix the crappy URLs in newest Google Clang versions and kernel version name and compile date/time (acuicultor) [3fce26a782f4]
-  * Revert "kbuild: use CONFIG_CC_VERSION_TEXT to construct LINUX_COMPILER macro" (acuicultor) [913627383870]
-  * defconfig regenerate (acuicultor) [8e7ceaa47e71]
-  * fs: default to noatime (arter97) [755895e8306a]
-  * sock: inline SELinux's sk_security to struct sock (Park Ju Hyung) [18ab253ce7fa]
-  * trace: Add a CONFIG_DISABLE_TRACE_PRINTK option. (Park Ju Hyung) [0c7bece84fd4]
-  * net/sched: Shut up (celtare21) [35e4d2807c1a]
-  * boeffla_wl_blocker: don't block any wakelock by default (acuicultor) [adf8a801ed6f]
-  * boeffla_wl_blocker: update to wakelock blocker driver v1.1.0 (andip71) [a6e36ce4a09d]
-  * boeffla_wl_blocker: update to wakelock blocker driver v1.0.1 (andip71) [bf965443842f]
-  * boeffla_wl_blocker: add generic wakelock blocker driver v1.0.0 (andip71) [3974e175f698]
-  * arm64/dts: gs101: change timings for s6e3hc3 FHD (freak07) [0d67bf1b1a9e]
-  * treewide: use power efficient workingqueues (freak07) [ab7e812c2127]
-  * mm: vmstat: use power efficient workingqueues (freak07) [10ed2dd5c92f]
-  * gki_defconfig: enable advanced tcp, support ttl spoofing (freak07) [b48bd0c4da30]
-  * buildconfig: increase kswapd threads to 2 (freak07) [bc8c0c903d45]
-  * build: config gs101: adjust for build (freak07) [bbc897f38fde]
-  * build: disable cma debugging (freak07) [8ea8ae058453]
-  * buildscript: gs101: adjust vendor_boot ramdisk to reflect stock (freak07) [d3ab6fc67f80]
-  * kernel: Use the stock config for /proc/config.gz (Sultan Alsawaf) [ef2a79aaa76e]
-  * update ignore (acuicultor) [e8418a58582c]
+Project name: RadioactiveKernel_Raviole-v2.0.3
+  * update build version (acuicultor)
+  * mm: Don't hog the CPU and zone lock in rmqueue_bulk() (Sultan Alsawaf) [5fd949dc1f5e]
+  * mm: Lower the non-hugetlbpage pageblock size to reduce scheduling delays (Sultan Alsawaf) [4ecd61d2eadf]
+  * sched/fair: Merge select_idle_core/cpu() (Mel Gorman) [547d49748766]
+  * sched/fair: Move avg_scan_cost calculations under SIS_PROP (Mel Gorman) [beddf3ed5013]
+  * sched/fair: Remove SIS_AVG_CPU (Mel Gorman) [fe758c4cf7f5]
+  * sched: reduce softirq conflicts with RT (Miguel de Dios) [c623b6af4b3b]
+  * gki: update abi (acuicultor) [23bbacbd4d4e]
+  * CHROMIUM: selinux: Do not log permissive denials (Daniel Kurtz) [da6ca9189675]
+  * arm64: debug: disable self-hosted debug by default (kdrag0n) [452190141a50]
+  * defconfig regenerate (acuicultor) [11b66a4a3e4a]
+  * arch: arm64: Don't select KASAN and KFENCE (celtare21) [d5e753a53b8c]
+  * printk: Don't allow userspace to write to /dev/kmsg (idkwhoiam322) [37731f7d04b6]
+  * Revert "BACKPORT: can: ems_usb: ems_usb_start_xmit(): fix double dev_kfree_skb() in error path" (acuicultor) [3c439f25e829]
+  * configs: Set the correct value for NR_CPUS (celtare21) [22effd443609]
+  * Merge branch 'android-gs-raviole-5.10-android13' into release-T (acuicultor)
+  android-gs-raviole-5.10-android13:
+  FROMGIT: io_uring: Use original task for req identity in io_identity_cow()
+  FROMGIT: arm64: fix oops in concurrently setting insn_emulation sysctls
+  BACKPORT: usb: gadget: rndis: prevent integer overflow in rndis_set_response()
+  FROMLIST: binder: fix UAF of ref->proc caused by race condition
